small edits, we have selection and projection done here

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <br>
     <h2>Please select one of these options:</h2>
     <br>
-    <button class="btm-space" onclick="window.location.href='http:www.google.com/'">CREATE</button>
+    <button class="btm-space" type="submit" onclick="window.location.href=''">CREATE</button>
     <br>
-    <button class="btm-space" type="submit" onclick="window.location.href='www.google.com/'">UPDATE</button>
+    <button class="btm-space" type="submit" onclick="window.location.href=''">UPDATE</button>
     <br>
-    <button class="btm-space" type="submit" onclick="window.location.href='viewOrders.php'">TRACK</button>
+    <button class="btm-space" type="submit" onclick="window.location.href='tracking.html'">TRACK</button>
+    <br>
 
 
 </body>
