fixed issues, createorder now done

--- a/createorder.html
+++ b/createorder.html
@@ -1,5 +1,6 @@
 <!doctype html>
 
+<html>
 <style>
     .btm-space {
        margin-bottom: 30px;
@@ -10,6 +11,7 @@
     <meta charset="utf-8">
     <title>Place your order - SuperMail</title>
 </head>
+
 
 <body>
     <h2>Send gifts! Send love! Send something!</h2>
