--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 
+<html>
 <style>
     .btm-space {
        margin-bottom: 30px;
     }
-  </style>
+</style>
 
 <head>
     <meta charset="utf-8">
@@ -17,9 +18,9 @@
     <br>
     <h2>Please select one of these options:</h2>
     <br>
-    <button class="btm-space" type="submit" onclick="window.location.href=''">CREATE</button>
+    <button class="btm-space" type="submit" onclick="window.location.href='createorder.html'">CREATE</button>
     <br>
-    <button class="btm-space" type="submit" onclick="window.location.href=''">UPDATE</button>
+    <button class="btm-space" type="submit" onclick="window.location.href='update.html'">UPDATE</button>
     <br>
     <button class="btm-space" type="submit" onclick="window.location.href='tracking.html'">TRACK</button>
     <br>
