delete is done, fixed create.sql

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     .btm-space {
        margin-bottom: 30px;
     }
-</style>
+  </style>
 
 <head>
     <meta charset="utf-8">
@@ -20,9 +20,11 @@
     <br>
     <button class="btm-space" type="submit" onclick="window.location.href='createorder.html'">CREATE</button>
     <br>
-    <button class="btm-space" type="submit" onclick="window.location.href='update.html'">UPDATE</button>
+    <button class="btm-space" type="submit" onclick="window.location.href='update'">UPDATE</button>
     <br>
     <button class="btm-space" type="submit" onclick="window.location.href='tracking.html'">TRACK</button>
+    <br>
+    <button class="btm-space" type="submit" onclick="window.location.href='delete.html'">DELETE</button>
     <br>
 
 
