--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
     <br>
     <h2>Please select one of these options:</h2>
     <br>
-    <button class="btm-space" type="submit" onclick="window.location.href='createorder.html'">CREATE</button>
+    <button class="btm-space" type="submit" onclick="window.location.href='createorder.html'">CREATE ORDER (insert)</button>
     <br>
-    <button class="btm-space" type="submit" onclick="window.location.href='update'">UPDATE</button>
+    <button class="btm-space" type="submit" onclick="window.location.href='update.html'">UPDATE (update)</button>
     <br>
-    <button class="btm-space" type="submit" onclick="window.location.href='tracking.html'">TRACK</button>
+    <button class="btm-space" type="submit" onclick="window.location.href='tracking.html'">TRACK (selection, projection)</button>
     <br>
-    <button class="btm-space" type="submit" onclick="window.location.href='delete.html'">DELETE</button>
+    <button class="btm-space" type="submit" onclick="window.location.href='delete.html'">DELETE (delete)</button>
+    <br>
+    <button class="btm-space" type="submit" onclick="window.location.href='traceemployee.html'">TRACE EMPLOYEE (nested selection, projection)</button>
+    <br>
+    <button class="btm-space" type="submit" onclick="window.location.href='employeeworkarea.php'">EMPLOYEE WORKAREA (join)</button>
     <br>
 
 
