--- a/traceemployee.html
+++ b/traceemployee.html
@@ -9,7 +9,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Order Tracking - SuperMail</title>
+    <title>Trace Employee - SuperMail</title>
 </head>
 
 
@@ -19,14 +19,13 @@
     </form>
     <br>
     
-    <h2>Track your order!</h2>
+    <h2>Wonder who was in charge of your order? Find that employee!</h2>
     <br>
 
-    <form action="tracking.php" method="post"> 
+    <form action="traceemployee.php" method="post"> 
         <label>Enter your Order ID</label>
         <br>
-        <input name="where_cols" type="text" 
-        placeholder="enter order ID">
+        <input name="order_id" type="text" placeholder="enter order ID">
         <br>
         <input type="submit" value="Search">
     </form>
