pricings (aggregate) done

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <br>
     <button class="btm-space" type="submit" onclick="window.location.href='employeeworkarea.php'">EMPLOYEE WORKAREA (join)</button>
     <br>
+    <button class="btm-space" type="submit" onclick="window.location.href='pricings.php'">PRICINGS (aggregate)</button>
+    <br>
 
 
 </body>
