--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <br>
     <button class="btm-space" type="submit" onclick="window.location.href='pricings.php'">PRICINGS (aggregate)</button>
     <br>
+    <button class="btm-space" type="submit" onclick="window.location.href='largestorder.php'">LARGEST ORDER (nested aggregate)</button>
+    <br>
 
 
 </body>
