--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="headingBanner">
     <div class="heading">
-        <h1>SuperMail</h1>
+    <h1>SuperMail</h1>
     </div>
 </div>
 
@@ -20,16 +20,13 @@
 </div>
 
 <div class="divider" style="margin-bottom: 3%;">
-
-    </div>
-
+</div>
 
 <div class="itemWrapper">
 
-
-        <div class="grid-item">
+    <div class="grid-item">
     <button class="btm-space" type="submit" onclick="window.location.href='createorder.html'">
-        <div class="itemIcon"><i class="fa fa-pencil-square-o"></i></div><br>Create</button>
+    <div class="itemIcon"><i class="fa fa-pencil-square-o"></i></div><br>Create</button>
     </div>
 
     <div class="grid-item">
@@ -44,7 +41,7 @@
 
     <div class="grid-item">
     <button class="btm-space" type="submit" onclick="window.location.href='delete.html'">
-        <div class="itemIcon"><i class="fa fa-trash" aria-hidden="true"></i></div><br>Delete</button>
+    <div class="itemIcon"><i class="fa fa-trash" aria-hidden="true"></i></div><br>Delete</button>
     </div>
 
     <div class="grid-item">
@@ -54,7 +51,7 @@
 
     <div class="grid-item">
     <button class="btm-space" type="submit" onclick="window.location.href='employeeworkarea.php'">
-        <div class="itemIcon"><i class="fa fa-map-o" aria-hidden="true"></i></div><br>Employee Workarea</button>
+    <div class="itemIcon"><i class="fa fa-map-o" aria-hidden="true"></i></div><br>Employee Workarea</button>
     </div>
     
     <div class="grid-item">
@@ -62,15 +59,21 @@
     <div class="itemIcon"><i class="fa fa-credit-card" aria-hidden="true"></i></div><br>Pricings</button>
     </div>
    
-   <div class="grid-item"> 
+    <div class="grid-item"> 
     <button class="btm-space" type="submit" onclick="window.location.href='largestorder.php'">
-        <div class="itemIcon"><i class="fa fa-line-chart" aria-hidden="true"></i></div><br>Largest Order</button>
-</div>
+    <div class="itemIcon"><i class="fa fa-line-chart" aria-hidden="true"></i></div><br>Largest Order</button>
+    </div>
+
+    <div class="grid-item"> 
+    <button class="btm-space" type="submit" onclick="window.location.href='popularcustomer.php'">
+    <div class="itemIcon"><i class="fa fa-fire" aria-hidden="true"></i></div><br>Popular Customer</button>
+    </div>
+
 </div>
 
 <div class="divider">
+</div>
 
-    </div>
 </body>
 
 </html>
