--- a/update.html
+++ b/update.html
@@ -1,43 +1,64 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html>
-<style>
-    .btm-space {
-       margin-bottom: 30px;
-    }
-  </style>
 
 <head>
     <meta charset="utf-8">
     <title>Update - SuperMail</title>
+    <link rel="stylesheet" type="text/css" href="style/all.css">
 </head>
 
 
 <body>
-    <form action="index.html" method="post">
-        <input type="submit" value="Back">
-    </form>
-    <br>
-    
-    <h2>Input your Order ID:</h2>
-    <br>
 
-    <form action="update.php" method="post"> 
-        <label>Which order would you like to update?</label>
-        <br>
-        <input name="order_ID" type="text" placeholder="order ID">
-        <br>
-        <br>
-        <label>Change to: </label>
-            <select name = 'drop_down'>
-                <option value = 'pending' selected>Pending delivery</option>
-                <option value = 'enroute' >Enroute</option>
-                <option value = 'delivered' >Delivered</option>
-            </select>
-        <br>
-        <input type="submit" value="Update">
-    </form>
-    <br>
+    <div class="headingBanner-update">
+
+        <form action="index.html" method="post">
+            <button class="home-btn" type="submit" value="Back"><i class="fa fa-home" aria-hidden="true" ></i></button>
+            <input type="submit" value="Back">
+
+            <div class="headingTitle-update">
+                <h1>Update your Order ID</h1>
+            </div>
+        </form>
+
+    </div>
+
+    <div class="text-link-wrapper">
+        <div class="intro-text">
+            Which order would you like to update?
+        </div>
+        
+
+        <!-- notice this one -wy -->
+        <div class="intro-link">
+            Powered by SuperMail
+            <a href="#" target="_blank"> < Go back</a>
+        </div>
+        <!-- this one ^ -->
+
+    </div>
+
+    <div class="updateOrder">
+        <form action="update.php" method="post"> 
+
+        <div class="updateInput">
+            <input name="order_ID" type="text" placeholder="Order ID">
+        </div>
+
+        <div class="updateDropdown">
+            <h3>Change to</h3>
+                <select name = 'drop_down'>
+                    <option value = 'pending' selected>Pending delivery</option>
+                    <option value = 'enroute' >Enroute</option>
+                    <option value = 'delivered' >Delivered</option>
+                </select>
+            </div>
+
+        <div class="update-btn">
+            <input type="submit" value="Update">
+        </div>
+        </form>
+    </div>
 
 </body>
 
