finalized for top 4 buttons
todo:
traceemployee has issues
make employeeworkarea dynamic
make popularcustomer dynamic

--- a/createorder.html
+++ b/createorder.html
@@ -25,7 +25,7 @@
 
     <div class="text-link-wrapper">
         <div class="intro-text">
-            Place an order here! Powered by SuperMail
+            Create an order here! 
         </div>
     </div>
 
