--- a/update.html
+++ b/update.html
@@ -17,7 +17,7 @@
             <input type="submit" value="Back">
 
             <div class="headingTitle-update">
-                <h1>Update your Order ID</h1>
+                <h1>Update your Order status!</h1>
             </div>
         </form>
 
@@ -25,16 +25,13 @@
 
     <div class="text-link-wrapper">
         <div class="intro-text">
-            Which order would you like to update?
+            Which order would you like to update? 
         </div>
-        
 
-        <!-- notice this one -wy -->
-        <div class="intro-link">
+        <!-- <div class="intro-link">
             Powered by SuperMail
             <a href="#" target="_blank"> < Go back</a>
-        </div>
-        <!-- this one ^ -->
+        </div> -->
 
     </div>
 
@@ -47,12 +44,12 @@
 
         <div class="updateDropdown">
             <h3>Change to</h3>
-                <select name = 'drop_down'>
-                    <option value = 'pending' selected>Pending delivery</option>
-                    <option value = 'enroute' >Enroute</option>
-                    <option value = 'delivered' >Delivered</option>
-                </select>
-            </div>
+            <select name = 'drop_down'>
+                <option value = 'pending' selected>Pending delivery</option>
+                <option value = 'enroute' >Enroute</option>
+                <option value = 'delivered' >Delivered</option>
+            </select>
+        </div>
 
         <div class="update-btn">
             <input type="submit" value="Update">
