--- a/tracking.html
+++ b/tracking.html
@@ -36,13 +36,16 @@
                     <br>
                     <br>
                     <br>
+                    <br>
                     <h1>What to display: </h1>
                     <br>
                     <select name = 'cust_cols'>
-                        <option value = 'delivery_date' selected>Delivery Date</option>
+                        <option value = 'delivery_date' selected>Delivery Date (empty if null)</option>
                         <option value = 'priority' >Priority</option>
                         <option value = 'pricing' >Pricing</option>
                     </select>
+                    <br>
+                    <h1>(Displays order ID, initial date, delivery status and above option)</h1>
                 </div>
             </div>
 
