--- a/update.html
+++ b/update.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Update - SuperMail</title>
     <link rel="stylesheet" type="text/css" href="style/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 
@@ -14,7 +15,7 @@
 
         <form action="index.html" method="post">
             <button class="home-btn" type="submit" value="Back"><i class="fa fa-home" aria-hidden="true" ></i></button>
-            <input type="submit" value="Back">
+            <!-- <input type="submit" value="Back"> -->
 
             <div class="headingTitle-update">
                 <h1>Update your Order status!</h1>
