--- a/traceemployee.html
+++ b/traceemployee.html
@@ -16,7 +16,12 @@
         </form>
 
         <div class="headingTitle-trace">
-        <h1>Wonder who was in charge of your order? Find that employee!</h1>
+        <h1>
+            Wonder who was in charge of your order? 
+            <br> 
+            <br>
+            Find that employee!
+        </h1>
         </div>
 
         <div class="searchWrapper">
