all queries, css finalized

--- a/createorder.html
+++ b/createorder.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Place your order - SuperMail</title>
+    <title>Create Order - SuperMail</title>
     <link rel="stylesheet" type="text/css" href="style/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -17,7 +17,7 @@
             <button class="home-btn" type="submit" value="Back"><i class="fa fa-home" aria-hidden="true" ></i></button>
         <!--  <input  value="Back">  -->   
             <div class="headingTitle-create">
-                <h1>Create Your Order</h1>
+                <h1>Create your order!</h1>
             </div>
         </form>
 
