--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="headingBanner">
     <div class="heading">
-    <h1>SuperMail</h1>
+    <h1>S U P E R M A I L</h1>
     </div>
 </div>
 
@@ -50,8 +50,8 @@
     </div>
 
     <div class="grid-item">
-    <button class="btm-space" type="submit" onclick="window.location.href='employeeworkarea.php'">
-    <div class="itemIcon"><i class="fa fa-map-o" aria-hidden="true"></i></div><br>Employee Workarea</button>
+    <button class="btm-space" type="submit" onclick="window.location.href='join.html'">
+    <div class="itemIcon"><i class="fa fa-map-o" aria-hidden="true"></i></div><br>Employee Details</button>
     </div>
     
     <div class="grid-item">
