--- a/delete.html
+++ b/delete.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Delete - SuperMail</title>
+    <title>Delete Employee - SuperMail</title>
     <link rel="stylesheet" type="text/css" href="style/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -15,7 +15,7 @@
 <!--         <input type="submit" value="Back"> -->
     </form>
     <div class="headingTitle-delete">
-    <h1>Input employee ID to be deleted</h1>
+    <h1>Fire which employee?</h1>
     </div>
 
     <form action="delete.php" method="post"> 
