--- a/update.html
+++ b/update.html
@@ -18,7 +18,7 @@
             <!-- <input type="submit" value="Back"> -->
 
             <div class="headingTitle-update">
-                <h1>Update your Order status!</h1>
+                <h1>Update your order status!</h1>
             </div>
         </form>
 
